--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -16,6 +16,12 @@
       <li class="nav-item">
         <a class="nav-link" href="/register">Register</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/secret">Profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/logout">Logout</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
